// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScreenHeader — both variants coexist > atoms::ScreenHeader (CouplScreenHeader) — eyebrow + meta + custom accent 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "marginBottom": "18px",
    }
  }
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(131,125,141,1.00)",
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
            "letterSpacing": "1.4px",
            "marginBottom": "8px",
            "textTransform": "uppercase",
          }
        }
      >
        03 · JOURNAL
      </div>
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
            "fontFamily": "BitcountPropSingle_700Bold",
            "fontSize": "42px",
            "letterSpacing": "0px",
            "lineHeight": "41.16px",
          }
        }
      >
        Today
        <AnimatedText
          style={
            [
              {
                "color": "#f0c050",
              },
              {
                "opacity": 1,
              },
            ]
          }
        >
          .
        </AnimatedText>
      </div>
    </div>
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "marginTop": "10px",
      }
    }
  >
    <Svg
      height={8}
      opacity={0.75}
      viewBox="0 0 96 8"
      width={96}
    >
      <Path
        d="M0 4 Q 12 0, 24 4 T 48 4 T 72 4 T 96 4"
        fill="none"
        stroke="#f0c050"
        strokeLinecap="round"
        strokeWidth={2}
      />
    </Svg>
  </div>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(88,97,116,1.00)",
        "fontFamily": "Geist_500Medium",
        "fontSize": "11px",
        "letterSpacing": "0.4px",
        "marginTop": "10px",
      }
    }
  >
    12 entries
  </div>
</div>
`;

exports[`ScreenHeader — both variants coexist > atoms::ScreenHeader (CouplScreenHeader) — title only 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "marginBottom": "18px",
    }
  }
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
            "fontFamily": "BitcountPropSingle_700Bold",
            "fontSize": "42px",
            "letterSpacing": "0px",
            "lineHeight": "41.16px",
          }
        }
      >
        Journal
        <AnimatedText
          style={
            [
              {
                "color": "#D96B52",
              },
              {
                "opacity": 1,
              },
            ]
          }
        >
          .
        </AnimatedText>
      </div>
    </div>
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "marginTop": "10px",
      }
    }
  >
    <Svg
      height={8}
      opacity={0.75}
      viewBox="0 0 96 8"
      width={96}
    >
      <Path
        d="M0 4 Q 12 0, 24 4 T 48 4 T 72 4 T 96 4"
        fill="none"
        stroke="#D96B52"
        strokeLinecap="round"
        strokeWidth={2}
      />
    </Svg>
  </div>
</div>
`;

exports[`ScreenHeader — both variants coexist > ui/ScreenHeader.tsx — gold accent, no back 1`] = `
<div
  className="css-view-g5y9jx r-paddingBottom-1l7z4oj r-paddingInline-cxgwc0 r-paddingTop-ttdzmv"
  dir={null}
  ref={[Function]}
>
  <div
    className="css-view-g5y9jx r-alignItems-1habvwh r-flexDirection-18u37iz r-gap-1cmwbt1"
    dir={null}
    ref={[Function]}
  >
    <div
      className="css-view-g5y9jx r-height-mabqd8 r-width-1yvhtrz"
      dir={null}
      ref={[Function]}
    />
    <div
      className="css-view-g5y9jx r-flex-13awgt0"
      dir={null}
      ref={[Function]}
    >
      <div
        className="css-text-146c3p1 r-fontFamily-177ha3a r-fontSize-10x49cs r-fontWeight-b88u0q r-letterSpacing-10b5y5f r-lineHeight-1f529hi r-textTransform-tsynxw r-marginBottom-f1odvy"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(131,125,141,1.00)",
          }
        }
      >
        01 · HOME
      </div>
      <div
        className="css-text-146c3p1 r-fontFamily-wx4ldx r-fontSize-1ui5ee8 r-letterSpacing-oxtfae r-lineHeight-2agvir"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
          }
        }
      >
        Home
      </div>
      <div
        className="css-view-g5y9jx"
        dir={null}
        ref={[Function]}
        style={
          {
            "backgroundColor": "rgba(167,123,45,1.00)",
            "borderBottomLeftRadius": "1px",
            "borderBottomRightRadius": "1px",
            "borderTopLeftRadius": "1px",
            "borderTopRightRadius": "1px",
            "height": "2px",
            "marginTop": "6px",
            "width": "28px",
          }
        }
      />
    </div>
    <div
      className="css-view-g5y9jx r-height-mabqd8 r-width-1yvhtrz"
      dir={null}
      ref={[Function]}
    />
  </div>
</div>
`;

exports[`ScreenHeader — both variants coexist > ui/ScreenHeader.tsx — with back btn + action + wavy accent 1`] = `
<div
  className="css-view-g5y9jx r-paddingBottom-1l7z4oj r-paddingInline-cxgwc0 r-paddingTop-ttdzmv"
  dir={null}
  ref={[Function]}
>
  <div
    className="css-view-g5y9jx r-alignItems-1habvwh r-flexDirection-18u37iz r-gap-1cmwbt1"
    dir={null}
    ref={[Function]}
  >
    <div
      className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1habvwh r-height-mabqd8 r-justifyContent-1777fci r-width-1yvhtrz"
      dir={null}
      onClick={[Function]}
      onContextMenu={[Function]}
      onKeyDown={[Function]}
      ref={[Function]}
      style={
        {
          "transitionDuration": "0s",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
      >
        feather:arrow-left
      </div>
    </div>
    <div
      className="css-view-g5y9jx r-flex-13awgt0"
      dir={null}
      ref={[Function]}
    >
      <div
        className="css-text-146c3p1 r-fontFamily-wx4ldx r-fontSize-1ui5ee8 r-letterSpacing-oxtfae r-lineHeight-2agvir"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
          }
        }
      >
        Tasks
      </div>
      <div
        className="css-view-g5y9jx"
        dir={null}
        ref={[Function]}
        style={
          {
            "marginTop": "4px",
          }
        }
      >
        <Svg
          height={8}
          opacity={0.85}
          viewBox="0 0 100 8"
          width={100}
        >
          <Path
            d="M0 4 Q 12.5 0, 25 4 T 50 4 T 75 4 T 100 4"
            fill="none"
            stroke="#A77B2D"
            strokeLinecap="round"
            strokeWidth={2}
          />
        </Svg>
      </div>
      <div
        className="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-gap-1cmwbt1 r-marginTop-kc8jnq"
        dir={null}
        ref={[Function]}
      >
        <div
          className="css-text-146c3p1"
          dir="auto"
          ref={[Function]}
        >
          4 open
        </div>
      </div>
    </div>
    <div
      className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-obd0qt r-height-mabqd8 r-justifyContent-1777fci r-width-1yvhtrz"
      dir={null}
      onClick={[Function]}
      onContextMenu={[Function]}
      onKeyDown={[Function]}
      ref={[Function]}
      style={
        {
          "transitionDuration": "0s",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
      >
        feather:plus
      </div>
    </div>
  </div>
</div>
`;
